--- a/config/database.yml
+++ b/config/database.yml
@@ -9,23 +9,23 @@ default: &default
   encoding: utf8
   pool: 5
   username: focusadmin
-  password: ayylmao
+  password: focusgroupadmin
   host: localhost
   socket: MySQL
 
 development:
   <<: *default
-  database: focusgroup_development
+  database: focusapp_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: focusgroup_test
+  database: focusapp_test
 
 production:
   <<: *default
-  database: focusgroup_production
-  username: focusgroup
+  database: focusapp_production
+  username: focusapp
   password: <%= ENV['FOCUSAPP_DATABASE_PASSWORD'] %>
