--- a/config/database.yml
+++ b/config/database.yml
@@ -25,10 +25,9 @@ test:
   database: focusapp_test
 
 production:
-  <<: *default
   adapter: mysql2
-  database: focusapp
-  username: focusadmin
-  password: focusgroupadmin
+  username: root
+  password: Slaanesh88!
   host: localhost
-#  socket: /var/run/mysqld/mysqld.sock
+  database: focusapp
+  socket: /var/run/mysqld/mysqld.sock
